Update src/main/java/com/bookstore/controller/CategoryController.java
Co-authored-by: Olena Bruiako <bruyako.elena@gmail.com>